# DEVS-Graph-GUI

./: .gitignore  README.md  index.html  start_all.py
Cadmium_Builder/: .gitignore  generate_and_build.py  server.py
Cadmium_Builder/cadmium_project/: build_sim.sh
Cadmium_Builder/cadmium_project/main/: CMakeCache.txt  CMakeLists.txt  main.cpp
Cadmium_Builder/cadmium_project/main/include/: boolean_generator.hpp  counter.hpp  counter_system.hpp  generator_bool.hpp  generator_int.hpp  integer_generator.hpp
DEVSMap_to_Cadmium2/: DEVSMap_parser.py  generate_coupled_model_hpp.py  helper.py  parser_reading_files.py  server.py
DEVSMap_to_Cadmium2/input/: counter_atomic.json  generator_bool_atomic.json
DEVSMap_to_Cadmium_Parser/: .gitignore  DEVSMap_parser.py  generate_atomic_model_hpp.py  generate_coupled_model_hpp.py  generate_experiment_main_cpp.py  generate_main_cpp.py  generate_simple_statements.py  helper.py  parser_reading_files.py  server.py
GUI/: index.html
Oracle/: expected_DEVS_states.csv  gui_main.cpp  oracle_runner  oracle_runner.cpp  oracle_server.py  parse_output.cpp  parse_output.hpp  read_logs.cpp  read_logs.hpp  validator.cpp  validator.hpp
css/: styles.css
js/: conversions.js  experiment-actions.js  experiment-data.js  experiment-design.js  experimentalFrames.js  graph-utils.js  image-utils.js  main.js  shortcuts.js
models/: aviation.js  experimental-frames.js  nature.js  test_models.js
simulation_results/: counterOut.csv  stabilize_output_0.csv
temp_upload/: TrafficLightLog.csv  simulation_output (13).csv  simulation_output (15).csv
(+24 files in other folders)
